1 file modified, 1 added

--- a/index.html
+++ b/index.html
@@ -8,7 +8,19 @@
     <title>Twist Chat</title>
   </head>
   <body>
-    <h1 class="text-primary">Welcome Twist Chat</h1>
+
+    <!-- Navbar Start -->
+    <nav class="navbar text-center navbar-light bg-light">
+      <div class="container text-center">
+        <a class="navbar-brand " href="#">
+          <h1 class="text-center">Twist Chat</h1>
+        </a>
+      </div>
+    </nav>
+    
+    <!-- Sidebar Start -->
+
+    <!-- Sidebar Ends -->
 
 
     <!-- Incuding Bootstrap -->
@@ -22,5 +34,8 @@
       integrity="sha384-kjU+l4N0Yf4ZOJErLsIcvOU2qSb74wXpOhqTvwVx3OElZRweTnQ6d31fXEoRD1Jy"
       crossorigin="anonymous"
     ></script>
+
+    <!-- Include SideBars -->
+    <script src="sidebar.js"></script>
   </body>
 </html>
